fix topbar layout issue at ie11

--- a/client/stylesheets/components/_topbar.scss
+++ b/client/stylesheets/components/_topbar.scss
@@ -1,6 +1,5 @@
 .topbar {
   display: flex;
-  justify-content: flex-end;
   align-items: center;
   height: $topbar-height;
   flex-shrink: 0;
